--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>You contact me on:</h2>
+						<h2>You can contact me on:</h2>
 					</header>
 
 					<p><li>ansharalif@gmail.com</li><li>+6285860309197</li></p>
