--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<p>In this project we taking movies data from <a href="https://www.kaggle.com/"target="_blank">Kaggle</a> then using Jupyter Notebook and Python to analyze what correlation and variables effect the gross revenue from movies.</p>
 						</div>
 					</section>
-					<section class="feature right"> 
+					<section class="feature left"> 
 						<a href=https://github.com/ansharalif/Automating-CoinMarketCap-Website-API-Pull-Using-Python- target="_blank" class="image icon solid fa-signal"><img src="images/bitcoin.png" alt="" /></a>
 						<div class="content">
 							<h3>Automating Crypto Website API Pull Using Python </h3>
