--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<a href=https://github.com/ansharalif/Automating-CoinMarketCap-Website-API-Pull-Using-Python- target="_blank" class="image icon solid fa-signal"><img src="images/bitcoin.png" alt="" /></a>
 						<div class="content">
 							<h3>Automating Crypto Website API Pull Using Python </h3>
-							<p>In this project we using API from <a href="https://www.coinmarketcap.com/"target="_blank">Kaggle</a> to automating data pull and implemented that by using Jupyter Notebook and Python.</p>
+							<p>In this project we using API from <a href="https://www.coinmarketcap.com/"target="_blank">CoinMarketCap</a> to automating data pull and implemented that by using Jupyter Notebook and Python.</p>
 						</div>
 					</section>
 				</div>
