--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 				</header>
 
 				<div class="box alt container">
+					<section class="feature right">
+						<a href="https://app.powerbi.com/view?r=eyJrIjoiZTBjM2IzNGUtNWJmYi00NWU1LWFkOTEtYzA5OTYwZjgxMDI3IiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class="image icon solid fa-home"><img src="images/bola2.png" alt="" /></a>
+						<div class="content">
+							<h3>Data Visualization for English Premier League (EPL) Team Goal Stats</h3>
+							<p>Here is a data visualization for English Premier League (EPL) 2021/2022 season stats with main focus on team goal where data collected from <a href="https://fbref.com/en/comps/9/Premier-League-Stats"target="_blank">FBREF</a> and then visualized by using Power BI.</p>
+						</div>
+					</section>
 					<section class="feature left">
 						<a href="https://github.com/ansharalif/NashvilleHousingDataCleaningProject" target="_blank" class="image icon solid fa-home"><img src="images/nashville.PNG" alt="" /></a>
 						<div class="content">
