--- a/index.html
+++ b/index.html
@@ -36,42 +36,42 @@
 
 				<div class="box alt container">
 					<section class="feature right">
-						<a href="https://app.powerbi.com/view?r=eyJrIjoiZTBjM2IzNGUtNWJmYi00NWU1LWFkOTEtYzA5OTYwZjgxMDI3IiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank"><img src="images/bola2.png" alt="" /></a>
+						<a href="https://app.powerbi.com/view?r=eyJrIjoiZTBjM2IzNGUtNWJmYi00NWU1LWFkOTEtYzA5OTYwZjgxMDI3IiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class=""><img src="images/bola2.png" alt="" /></a>
 						<div class="content">
 							<h3>Data Visualization for English Premier League (EPL) Team Goal Stats</h3>
 							<p>Here is a data visualization for English Premier League (EPL) 2021/2022 season stats with main focus on team goal where data collected from <a href="https://fbref.com/en/comps/9/Premier-League-Stats"target="_blank">FBREF</a> and then visualized by using Power BI.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://github.com/ansharalif/NashvilleHousingDataCleaningProject" target="_blank"><img src="images/nashville.PNG" alt="" /></a>
+						<a href="https://github.com/ansharalif/NashvilleHousingDataCleaningProject" target="_blank" class=""><img src="images/nashville.PNG" alt="" /></a>
 						<div class="content">
 							<h3>Data Cleaning in SQL</h3>
 							<p>In this project we using raw housing data from <a href="https://www.kaggle.com/"target="_blank">Kaggle</a> and then we clean and transform it in SQLServer to make it more usable and easy for analysis.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="https://public.tableau.com/app/profile/anshar.alifya.ihsan/viz/AirBnBSeattle2016FullProject_16411985942860/Dashboard1" target="_blank"><img src="images/Dashboard 1.png" alt="" /></a>
+						<a href="https://public.tableau.com/app/profile/anshar.alifya.ihsan/viz/AirBnBSeattle2016FullProject_16411985942860/Dashboard1" target="_blank" class=""><img src="images/Dashboard 1.png" alt="" /></a>
 						<div class="content">
 							<h3>Tableau Data Visualization from AirBnB in Seattle 2016 </h3>
 							<p>For this project we using data from AirBnB in Seattle 2016 and then we breakdown and visualize it's data using Tableau. </p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://public.tableau.com/app/profile/anshar.alifya.ihsan/viz/CovidDashboardDataUntil13thofJanuary2022/Dashboard1" target="_blank"><img src="images/dashboardcovid.png" alt="" /></a>
+						<a href="https://public.tableau.com/app/profile/anshar.alifya.ihsan/viz/CovidDashboardDataUntil13thofJanuary2022/Dashboard1" target="_blank" class=""><img src="images/dashboardcovid.png" alt="" /></a>
 						<div class="content">
 							<h3>Tableau Data Visualization COVID-19 Project</h3>
 							<p>This project taking COVID-19 global case data from <a href="https://www.ourworldindata.com/"target="_blank">Our World in Data</a> and using Tableau for analysis data visualization.</p>
 						</div>
 					</section>
 					<section class="feature right"> 
-						<a href="https://github.com/ansharalif/PythonDataCleaningAndCorrelationProject" target="_blank"><img src="images/Holiday-Movies.jpg" alt="" /></a>
+						<a href="https://github.com/ansharalif/PythonDataCleaningAndCorrelationProject" target="_blank" class=""><img src="images/Holiday-Movies.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Data Correlation with Python </h3>
 							<p>In this project we taking movies data from <a href="https://www.kaggle.com/"target="_blank">Kaggle</a> then using Jupyter Notebook and Python to analyze what correlation and variables effect the gross revenue from movies.</p>
 						</div>
 					</section>
 					<section class="feature left"> 
-						<a href=https://github.com/ansharalif/Automating-CoinMarketCap-Website-API-Pull-Using-Python- target="_blank"><img src="images/bitcoin.png" alt="" /></a>
+						<a href=https://github.com/ansharalif/Automating-CoinMarketCap-Website-API-Pull-Using-Python- target="_blank" class=""><img src="images/bitcoin.png" alt="" /></a>
 						<div class="content">
 							<h3>Automating Crypto Website API Pull Using Python </h3>
 							<p>In this project we using API from <a href="https://www.coinmarketcap.com/"target="_blank">CoinMarketCap</a> to automating data pull and implemented that by using Jupyter Notebook and Python.</p>
