--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
 					etiam vivamus nunc nibh morbi.</p>
 					-->
 				</header>
-
 				<div class="box alt container">
+					<section class="feature right">
+						<a href="https://app.powerbi.com/view?r=eyJrIjoiYzczNmQ4YzUtYzAxNS00MTk2LTllZDktNWIzODAwYWFhM2RjIiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class="image icon solid fa-signal"><img src="images/sales.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Data Visualization for Sales Analytics</h3>
+							<p>Here is a project example dashboard for Sales Analytics using Power BI for data visualization and SQL for data cleansing</p>
+						</div>
+					</section>
 					<section class="feature right">
 						<a href="https://app.powerbi.com/view?r=eyJrIjoiZTBjM2IzNGUtNWJmYi00NWU1LWFkOTEtYzA5OTYwZjgxMDI3IiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class="image icon solid fa-signal"><img src="images/bola2.png" alt="" /></a>
 						<div class="content">
