--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					-->
 				</header>
 				<div class="box alt container">
-					<section class="feature right">
+					<section class="feature left">
 						<a href="https://app.powerbi.com/view?r=eyJrIjoiYzczNmQ4YzUtYzAxNS00MTk2LTllZDktNWIzODAwYWFhM2RjIiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class="image icon solid fa-signal"><img src="images/sales.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Data Visualization for Sales Analytics</h3>
