--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
 				</header>
 				<div class="box alt container">
 					<section class="feature left">
+						<a href="https://github.com/ansharalif/Web-Scrapping-Understat-Data-Using-Python" target="_blank" class="image icon solid fa-signal"><img src="images/footballstat.webp" alt="" /></a>
+						<div class="content">
+							<h3>Web Scrapping Understat Data Using Python</h3>
+							<p>Here is a project for scrapping data from <a href="https://understat.com/"target="_blank">Understat</a> using python.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="https://github.com/ansharalif/Radar-Charts-for-Football-Analysis-in-Python" target="_blank" class="image icon solid fa-signal"><img src="images/result.png" alt="" /></a>
+						<div class="content">
+							<h3>Radar Charts for Football Analysis in Python</h3>
+							<p>Creating radar charts (inspired by statsbomb) for football analysis in python using soccerplot package with data collected <a href="https://fbref.com/en/comps/9/shooting/Premier-League-Stats#all_stats_shooting"target="_blank">FBREF </a>/ Statsbomb.
+						</div>
+					</section>
+					<section class="feature left">
 						<a href="https://app.powerbi.com/view?r=eyJrIjoiYzczNmQ4YzUtYzAxNS00MTk2LTllZDktNWIzODAwYWFhM2RjIiwidCI6Ijk5YjEyY2JkLTlmZTAtNGYwMS1hMmI3LWI5MTNjZWYzYTI2ZiIsImMiOjEwfQ%3D%3D" target="_blank" class="image icon solid fa-signal"><img src="images/sales.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Data Visualization for Sales Analytics</h3>
